# test-cdci

./: README.md  pyproject.toml
.github/workflows/: cicd.yaml  hello_world.yaml
app/: main.py  test_main.py
app/storage/: test.csv
