[tool.poetry]
name = "test-cdci"
version = "0.1.0"
description = ""
authors = ["AyumiOsawa <a.osawa1002@gmail.com>"]
readme = "README.md"
packages = [
  {include = "app"}
]

[tool.poetry.dependencies]
python = "^3.10"
petl = "^1.7.14"

[tool.poetry.scripts]
start = "app.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
